lcs-web (2.4.10~9) Lcs; urgency=low

  * Modify for Debian Wheezy
  * Synchronization with 2.4.9 tree

  * Fix create/delete user mysql db in Annu/people.php
  * Fix create admin folder for first acces
  * Fix bug in action.sh
  * Modify lcs-web-fixrights
  * Fix ntpdate cron task with -u option

  [ Philippe Leclerc ]
  * Fix notices php in /var/www 
  [Jean Luc Chretien]
  * Purify import accounts
  * Set flag executable on mkSlapdConf.sh
  * Replace apache2 restart by reload 
  * Modify mkhdir.sh ajax_ent.php and functions.inc.php (open_session() ) for administratif group

  [ Philippe Leclerc ]
  * new  function check_acces() in dirs Annu, Admin and lcs
  * fix loop auth in auth.php

  [ Jean-Luc Chrétien ]
  * Add tests in action.sh mkhdir.sh webperso.sh userDel.pl
  * Add mkhdir.sh in sudo.d/01-lcs-web 
  * Modify user_lcs.inc.php (log in /var/log/lcs/check.log
  * Add purififier and escape mysql request in statando.php
  * Add robots.txt and favicon.ico in /var/www
  * Filter sanitize string filter in group.php
  * Invalidate replica and ad sync
  * Mysql_escape variables in lcs
  * autocomplete off in auth.php

  [ Philippe Leclerc ]
  * Add log for check token
  * Add mail redirection
  * Modules securised : Add token, new session,htmlpurifier and escapeshellarg
  * Mysql_escape variables in modules and www/lcs/includes scripts

  [ Philippe Leclerc ]
  * Annu securised : Add token, new session and htmlpurifier
  [ Jean-Luc Chretien ]
  * Remove maj tgz, modify isauth()
  * Remove Plugins Interface and menu
  * Modify user_lcs_inc.php auth_lcs() function real_escape
  * Escape mysql request select in functions.inc.php
  * add exit after header redirection

  [Jean-Luc Chretien]
  * Fix rights on lcs-web tree
  * exit webalizer

  * Add .htaccess Options -Indexes in swekey and Plugins folders
  * Modify groupAddEntry.pl for wheezy
  * Add del_profil_desktop.php
  * Modifiy mKSlapdConf.sh (acl and default config...)